trunk/Archive2/38/5fd15020062cd1/output
main.cpp:41:1: error: static_assert failed "S2 is not really a tbase of S<int>, but S2<int> does produce S<int>"
static_assert( !is_tbase_of< S2,          S<int>                 >::value, "S2 is not really a tbase of S<int>, but S2<int> does produce S<int>" );
^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
